MODON MRE BPDEV/force-app/main/default/objects/DocusignConfiguration__mdt/DocusignConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>DocusignConfiguration</label>
    <pluralLabel>DocusignConfiguration</pluralLabel>
</CustomObject>