MODON MRE BPDEV/force-app/main/default/objects/DocusignConfiguration__mdt/fields/AccountBaseURI__c.field-meta.xml
<CustomField>
    <fullName>AccountBaseURI__c</fullName>
    <label>AccountBaseURI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>