MODON MRE BPDEV/force-app/main/default/objects/DocusignConfiguration__mdt/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>AccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>