MODON MRE BPDEV/force-app/main/default/objects/DocusignConfiguration__mdt/fields/DocuSignHostName__c.field-meta.xml
<CustomField>
    <fullName>DocuSignHostName__c</fullName>
    <label>DocuSignHostName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>