MODON MRE BPDEV/force-app/main/default/objects/DocusignConfiguration__mdt/fields/PrivateKey__c.field-meta.xml
<CustomField>
    <fullName>PrivateKey__c</fullName>
    <label>PrivateKey</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>